# parallel-2020

./: .gitignore  README.md
lab-1/: README.md  test.py
lab-1/cpp/: CMakeLists.txt  Main.cpp  Matrix.cpp  Multiplication.cpp
lab-2/: README.md  test.py
lab-2/cpp/: CMakeLists.txt  Jacobi.cpp  Main.cpp
lab-3/: README.MD  quicksort-test.py
lab-3/cpp/: CMakeLists.txt  main.cpp  processPool.cpp  sortArray.cpp  sorting.cpp
lab-4/: README.MD  test.py
lab-4/cpp/: CMakeLists.txt  Dijkstra.cpp  main.cpp
